k8s/chat-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\flutter\bin\kompose.exe convert --push-image-registry sfs2023.azurecr.io
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: chat-service
  name: chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chat-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\flutter\bin\kompose.exe convert --push-image-registry sfs2023.azurecr.io
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/securefilesharing-default: "true"
        io.kompose.service: chat-service
    spec:
      containers:
        - image: sfs2023.azurecr.io/chat_service
          name: chat-service
          ports:
            - containerPort: 3400
            - containerPort: 23432
          resources: {}
      restartPolicy: Always
status: {}
