k8s/detection-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\flutter\bin\kompose.exe convert --push-image-registry sfs2023.azurecr.io
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: detection
  name: detection
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: detection
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\flutter\bin\kompose.exe convert --push-image-registry sfs2023.azurecr.io
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/securefilesharing-default: "true"
        io.kompose.service: detection
    spec:
      containers:
        - image: sfs2023.azurecr.io/detection-image
          name: detection
          ports:
            - containerPort: 9087
          resources: {}
      restartPolicy: Always
status: {}
