k8s/django-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\flutter\bin\kompose.exe convert --push-image-registry sfs2023.azurecr.io
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: django-backend
  name: django-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: django-backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\flutter\bin\kompose.exe convert --push-image-registry sfs2023.azurecr.io
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/securefilesharing-default: "true"
        io.kompose.service: django-backend
    spec:
      containers:
        - image: sfs2023.azurecr.io/django-image
          name: django-backend
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
