k8s/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\flutter\bin\kompose.exe convert --push-image-registry sfs2023.azurecr.io
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\flutter\bin\kompose.exe convert --push-image-registry sfs2023.azurecr.io
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/securefilesharing-default: "true"
        io.kompose.service: minio
    spec:
      containers:
        - args:
            - server
            - /data
            - --console-address
            - :9001
          image: minio/minio:RELEASE.2023-03-24T21-41-23Z
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:9000/minio/health/live
            failureThreshold: 10
            periodSeconds: 30
            timeoutSeconds: 20
          name: minio
          ports:
            - containerPort: 9000
            - containerPort: 9001
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: minio-storage
      restartPolicy: Always
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-storage
status: {}
