k8s/mysql-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\flutter\bin\kompose.exe convert --push-image-registry sfs2023.azurecr.io
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql-database
  name: mysql-database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql-database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\flutter\bin\kompose.exe convert --push-image-registry sfs2023.azurecr.io
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/securefilesharing-default: "true"
        io.kompose.service: mysql-database
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: file_sharing
            - name: MYSQL_PASSWORD
              value: file_sharing
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: file_sharing
          image: mysql:latest
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
            failureThreshold: 20
            timeoutSeconds: 30
          name: mysql-database
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-volume
      restartPolicy: Always
      volumes:
        - name: mysql-volume
          persistentVolumeClaim:
            claimName: mysql-volume
status: {}
