k8s/django-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\flutter\bin\kompose.exe convert --push-image-registry sfs2023.azurecr.io
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: django-backend
  name: django-backend
spec:
  ports:
    - name: "2234"
      port: 2234
      targetPort: 8000
  selector:
    io.kompose.service: django-backend
status:
  loadBalancer: {}
